2012-01-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Preparing release (renaming binary and include
	directory to dlvhex2 to ensure coexistence with older version).
	* src/dlvhex/Makefile.am: Likewise, and dlvhex-specific naming of
	library for internal dlvhex plugins.
	* dlvhex2.pc.in: Likewise (renamed from dlvhex.pc.in).
	* dlvhex.pc.in: Likewise (remove).

2012-01-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Registry.hpp: Added storeRule() which checks
	if rule already exists in rule table and does not store duplicates.
	* include/dlvhex/RuleTable.hpp: Likewise.
	* include/dlvhex/HexGrammar.tcc: Likewise.
	* src/dlvhex/DependencyGraph.cpp: Likewise.
	* src/dlvhex/Registry.cpp: Likewise.
	* src/dlvhex/DependencyGraphFull.cpp: Likewise.
	* src/dlvhex/QueryPlugin.cpp: Likewise.
	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Likewise.
	* src/dlvhex/HigherOrderPlugin.cpp: Likewise.
	* src/dlvhex/BaseModelGenerator.cpp: Likewise.
	* src/dlvhex/MLPSolver.cpp: Likewise.
	* src/dlvhex/StrongNegationPlugin.cpp: Likewise.

	* src/dlvhex/ASPSolver.cpp: Splitting ASPSolver.cpp into solver
	backend specific compilation units.
	* src/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/ASPSolver_dlv.cpp: Likewise.
	* src/dlvhex/ASPSolver_libclingo.cpp: Likewise, and implemented
	threading for libclingo integration (similar to dlv threading).

	* include/dlvhex/ASPSolverManager.h: Making ASPProgram::idb a container instead
	of a reference (permits the caller to die without breaking the reference).
	* src/dlvhex/ASPSolver_libclingo.cpp: Implemented mask correctly (this fixes
	the GuessAndCheckModelBuilder together with libclingo).
	* src/dlvhex/ASPSolver_dlv.cpp: Added debugging messages.
	* examples/notwellfounded2.hex: Comment about solvability with clasp vs claspD.
	* examples/tests/higherorder5except.stderr: Making test clingo and dlv compatible.
	* examples/tests/libclingobackend.test.in: Added all original testcases for