@@ -1,5 +1,5 @@
 AC_PREREQ([2.61])
-AC_INIT([dlvhex2],[2.0.0],[dlvhex-devel@lists.sourceforge.net])
+AC_INIT([dlvhex],[2.0.0],[dlvhex-devel@lists.sourceforge.net])
 AM_INIT_AUTOMAKE([-Wall gnu check-news color-tests 1.11])
 
 AC_CONFIG_SRCDIR([src/dlvhex/dlvhex.cpp])
@@ -458,8 +458,15 @@ DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
-DX_INIT_DOXYGEN([dlvhex2], [doxygen.cfg], [doc])
+DX_INIT_DOXYGEN([dlvhex], [doxygen.cfg], [doc])
 
+# provide version to config.h
+MAJOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/"`
+MINOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/"`
+MICRO=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/"`
+AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MAJOR], [$MAJOR], [major version number])
+AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MINOR], [$MINOR], [minor version number])
+AC_DEFINE_UNQUOTED([DLVHEX_VERSION_MICRO], [$MICRO], [micro version number])
 
 # output autogenerated files
 AC_CONFIG_FILES([
